--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ To load the data into your environment run:
 ```{r eval=FALSE}
 lfs <- lfs_load()
 ```
-To reproduce official ONS publications, such as 
+To reproduce official ONS publications, such as
 
 * Unemployent [UNEM01 NSA](https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/datasets/unemploymentbyageanddurationnotseasonallyadjustedunem01nsa)
 ```{r eval=FALSE}
@@ -58,7 +58,7 @@ lfs %>%
 ```{r eval=FALSE}
 lfs %>%
     dplyr::filter(!is.na(OCCUPATION_MAJOR)) %>% # Filter out NA's
-    dplyr::filter(FTPTWK == "Full-time") %>%
+    dplyr::filter(FTPTWK == "Full-time") %>% # Take only full-time employees
     lfs_summarise_salary(QUARTER, OCCUPATION_MAJOR) %>%
     tidyr::pivot_wider(id_cols = QUARTER,
                        names_from = OCCUPATION_MAJOR,
