--- a/README.Rmd
+++ b/README.Rmd
@@ -74,3 +74,29 @@ lfs %>%
 ```
 
 For more information on the ONS variables, see the [LFS Guidance](https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyuserguidance).
+
+Some of the variables included by default are:
+```{r echo = F}
+
+library(magrittr)
+x <- tibble::tribble( ~`Variable Name`, ~`Definition`,
+"YEAR", "Year",
+"QUARTER", "Quarter",
+"SEX", "Sex",
+"GOVTOR", "Government Office Region",
+"AGE", "Age",
+"FTPTWK", "Part-Time/Full-time Status",
+"EDAGE", "Age when completed full time education",
+"TTACHR", "Actual hours worked",
+"UNION", "In union?",
+"HIQUALD", "Highest Qualification",
+"DEGREE", "Degree Subjeect",
+"OCCUPATION", "Occupation in main job",
+"PARENTAL_OCCUPATION", "Parental Occupation",
+"ETHNICITY", "Ethnicity"
+)
+
+x %>%
+  kableExtra::kbl(format = "pipe")
+
+```
