Fixed doc typos, updated ons download (#1)
* Fixed doc typos, updated ons download

* Added variables to readme

* Changed Degree to character

--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ To load the data into your environment run:
 ```{r eval=FALSE}
 lfs <- lfs_load()
 ```
-To reproduce official ONS publications, such as 
+To reproduce official ONS publications, such as
 
 * Unemployent [UNEM01 NSA](https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/datasets/unemploymentbyageanddurationnotseasonallyadjustedunem01nsa)
 ```{r eval=FALSE}
@@ -58,7 +58,7 @@ lfs %>%
 ```{r eval=FALSE}
 lfs %>%
     dplyr::filter(!is.na(OCCUPATION_MAJOR)) %>% # Filter out NA's
-    dplyr::filter(FTPTWK == "Full-time") %>%
+    dplyr::filter(FTPTWK == "Full-time") %>% # Take only full-time employees
     lfs_summarise_salary(QUARTER, OCCUPATION_MAJOR) %>%
     tidyr::pivot_wider(id_cols = QUARTER,
                        names_from = OCCUPATION_MAJOR,
@@ -74,3 +74,29 @@ lfs %>%
 ```
 
 For more information on the ONS variables, see the [LFS Guidance](https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyuserguidance).
+
+Some of the variables included by default are:
+```{r echo = F}
+
+library(magrittr)
+x <- tibble::tribble( ~`Variable Name`, ~`Definition`,
+"YEAR", "Year",
+"QUARTER", "Quarter",
+"SEX", "Sex",
+"GOVTOR", "Government Office Region",
+"AGE", "Age",
+"FTPTWK", "Part-Time/Full-time Status",
+"EDAGE", "Age when completed full time education",
+"TTACHR", "Actual hours worked",
+"UNION", "In union?",
+"HIQUALD", "Highest Qualification",
+"DEGREE", "Degree Subject",
+"OCCUPATION", "Occupation in main job",
+"PARENTAL_OCCUPATION", "Parental Occupation at 14",
+"ETHNICITY", "Ethnicity"
+)
+
+x %>%
+  kableExtra::kbl(format = "pipe")
+
+```
