--- a/vignettes/Adding_Variables.Rmd
+++ b/vignettes/Adding_Variables.Rmd
@@ -19,12 +19,46 @@ knitr::opts_chunk$set(
 
 * tidylfs is designed to be easily extended. Adding variables and summaries is a few steps:
 
-    * If your variable isn't currently in the compiled dataset, run `lfs_extra_mappings()`.
-    * Find the relevant variables in the ONS User guidance.
-    * Add them to the function.
-    * Load the function, and pass it as an argument to `lfs_compile`:
+    * Find the relevant variables in the [ONS LFS User guidance](https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyuserguidance).
+    * Add them to the function below.
+    * Load the function, and pass it as an argument to `lfs_compile`.
+
+
+* For example, to add maritial status:
 
 ```{r}
-lfs_extra_mappings()
+user_extra_mappings <- function(lfs_file_column_names) {
+
+  custom_variables <- tibble::tribble(
+    ~lfs_name,       ~new_name,     ~type,
+    "MARSEX6", "SEX_AND_MARITIAL_STATUS", "factor"
+    )
+
+  return(custom_variables)
+}
+
+lfs_compile("your_lfs_rds_directory", extra_mappings = user_extra_mappings)
+
 ```
 
+* To add a variable that changes over time, use `lfs_pick_column`. As an example, degree class is `DEGCLS7` from 2007 onwards, and `DEGCLS` before then. This code imports those as a factor (retaining the SPSS labels), and calls the new column `DEGREE_CLASS`.
+
+```{r}
+user_extra_mappings <- function(lfs_file_column_names) {
+
+  # This will pick DEGCLS7 if it exists in the quarterly file,
+  # if not then DEGCLS, otherwise it'll return NA.
+  degree_class <- lfs_pick_column(c("DEGCLS7", "DEGCLS"), lfs_file_column_names)
+
+  custom_variables <- tibble::tribble(
+    ~lfs_name,       ~new_name,     ~type,
+    "MARSEX6", "SEX_AND_MARITIAL_STATUS", "factor",
+    degree_class, "DEGREE_CLASS", "factor"
+    )
+
+  return(custom_variables)
+}
+
+lfs_compile("your_lfs_rds_directory", extra_mappings = user_extra_mappings)
+
+```
