--- a/README.Rmd
+++ b/README.Rmd
@@ -54,12 +54,11 @@ lfs %>%
 * Salary by occupation [EARN06](https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/grossweeklyearningsbyoccupationearn06)
 ```{r eval=FALSE}
 lfs %>%
-    dplyr::filter(!is.na(OCCUPATION_MAJOR)) %>% # Filter out NA's
-    dplyr::filter(FTPTWK == "Full-time") %>% # Take only full-time employees
-    lfs_summarise_salary(QUARTER, OCCUPATION_MAJOR) %>%
-    tidyr::pivot_wider(id_cols = QUARTER,
-                       names_from = OCCUPATION_MAJOR,
-                       values_from = mean_weekly_pay)
+    dplyr::filter(
+      !is.na(OCCUPATION_MAJOR), # Filter out NA's
+      FTPTWK == "Full-time" # Take only full-time employees
+    ) %>%
+    lfs_summarise_salary(QUARTER, OCCUPATION_MAJOR)
 ```
 
 Extending them is easy:
