Update github actions

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(
 # tidylfs
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/wklimowicz/tidylfs/workflows/R-CMD-check/badge.svg)](https://github.com/wklimowicz/tidylfs/actions)
+[![.github/workflows/R-CMD-check](https://github.com/wklimowicz/tidylfs/actions/workflows/.github/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/wklimowicz/tidylfs/actions/workflows/.github/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/wklimowicz/tidylfs/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/wklimowicz/tidylfs/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ## Installation
