--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # tidylfs
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/wklimowicz/tidylfs/workflows/R-CMD-check/badge.svg)](https://github.com/wklimowicz/tidylfs/actions)
+[![.github/workflows/R-CMD-check](https://github.com/wklimowicz/tidylfs/actions/workflows/.github/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/wklimowicz/tidylfs/actions/workflows/.github/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ## Installation
@@ -30,7 +30,18 @@ devtools::install_github("wklimowicz/tidylfs")
 
 ## Quickstart
 
-Copy the LFS `.sav` files into a directory (in my example `lfs_data_folder`) and run:
+Copy the LFS `.sav` files into a directory (in my example `lfs_data_folder`). They should look like this:
+
+```
+.
+└── lfs_data_folder/
+    ├── 1992 Q1.sav
+    ├── 1992 Q2.sav
+    ├── ...
+    └── 2020 Q2.sav
+```
+
+You can then run:
 
 ```{r eval=FALSE}
 library(tidylfs)
