Deprecated old functions, add warnings, replace with new ones

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,8 +48,10 @@ library(tidylfs)
 
 # Converts `.sav` files to `.Rds` files, to save
 # space and for quicker loading
-lfs_convert(lfs_directory = "lfs_data_folder/",
-            output_directory = "lfs_rds_folder/")
+lfs_convert(
+  lfs_directory = "lfs_data_folder/",
+  output_directory = "lfs_rds_folder/"
+)
 
 # Compiles into one file.
 lfs <- lfs_compile(lfs_directory = "lfs_rds_folder/")
