--- a/README.Rmd
+++ b/README.Rmd
@@ -48,81 +48,46 @@ library(tidylfs)
 
 # Converts `.sav` files to `.Rds` files, to save
 # space and for quicker loading
-lfs_convert(lfs_directory = "lfs_data_folder/",
-            output_directory = "lfs_rds_folder/")
+lfs_convert(
+  directory = "lfs_data_folder/",
+  output_directory = "lfs_rds_folder/"
+)
 
 # Compiles into one file.
-lfs <- lfs_compile(lfs_directory = "lfs_rds_folder/")
+lfs <- lfs_compile(directory = "lfs_rds_folder/")
 ```
 
-To reproduce official ONS publications, such as
+To view the variable mapping use `variable_mapping()`:
 
-* Unemployent [UNEM01 NSA](https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/datasets/unemploymentbyageanddurationnotseasonallyadjustedunem01nsa)
 ```{r eval=FALSE}
-lfs %>%
-    lfs_summarise_unemployment(QUARTER)
+variable_mapping(lfs)
 ```
 
-* Salary by occupation [EARN06](https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/grossweeklyearningsbyoccupationearn06)
-```{r eval=FALSE}
-lfs %>%
-    dplyr::filter(
-      !is.na(OCCUPATION_MAJOR), # Filter out NA's
-      FTPTWK == "Full-time" # Take only full-time employees
-    ) %>%
-    lfs_summarise_salary(QUARTER, OCCUPATION_MAJOR)
-```
+Code to reproduce some official ONS publications is in the `vignette("stats-replication")`. For more information on the ONS variables, see the [LFS Guidance](https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyuserguidance).
 
-Extending them is easy:
+A core set of variables is included by default. See `R/mappings.R` for the complete set. To add more variables see `vignette("adding-variables")`.
 
-* Unemployment by quarter, sex, and age category
-```{r eval=FALSE}
-lfs %>%
-  lfs_summarise_unemployment(QUARTER, SEX, AGES)
-```
-
-For more information on the ONS variables, see the [LFS Guidance](https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyuserguidance).
-
-Some of the variables included by default are:
 ```{r echo = F}
-
 library(magrittr)
-x <- tibble::tribble( ~`Variable Name`, ~`Definition`,
-"YEAR", "Year",
-"QUARTER", "Quarter",
-"SEX", "Sex",
-"GOVTOR", "Government Office Region",
-"AGE", "Age",
-"FTPTWK", "Part-Time/Full-time Status",
-"EDAGE", "Age when completed full time education",
-"TTACHR", "Actual hours worked",
-"UNION", "In union?",
-"HIQUALD", "Highest Qualification",
-"DEGREE_SUBJECT", "Degree Subject",
-"OCCUPATION", "Occupation in main job",
-"PARENTAL_OCCUPATION", "Parental Occupation at 14",
-"ETHNICITY", "Ethnicity"
+
+x <- tibble::tribble(
+  ~`Variable Name`, ~`Definition`,
+  "YEAR", "Year",
+  "QUARTER", "Quarter",
+  "SEX", "Sex",
+  "GOVTOR", "Government Office Region",
+  "AGE", "Age",
+  "ETHNICITY", "Ethnicity",
+  "FTPTWK", "Part-Time/Full-time Status",
+  "EDAGE", "Age when completed full time education",
+  "TTACHR", "Actual hours worked",
+  "HIQUALD", "Highest Qualification",
+  "DEGREE_SUBJECT", "Degree Subject",
+  "OCCUPATION", "Occupation in main job",
+  "PARENTAL_OCCUPATION", "Parental Occupation at 14"
 )
 
 x %>%
   kableExtra::kbl(format = "pipe")
-
 ```
 
-# Using the data across multiple projects
-
-To avoid storing multiple copies of the compiled dataset, you can set the `DATA_DIRECTORY` environment variable before compiling. This can be done on the system or in `.Rprofile`:
-
-```{r eval = FALSE}
-Sys.setenv(DATA_DIRECTORY = "path/to/folder")
-```
-When compiling the dataset include the save_to_folder option as `TRUE`:
-
-```{r eval = FALSE}
-lfs_compile(lfs_directory = "lfs_rds_folder/", save_to_folder = TRUE)
-```
-The compiled dataset will be saved to the directory as an fst file, and you can load it from anywhere using this command:
-
-```{r eval=FALSE}
-lfs <- lfs_load(data.table = FALSE)
-```
